--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,19 @@
             <artifactId>pi4j-core</artifactId>
             <version>1.2-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-gpio-extension</artifactId>
+            <version>1.2-SNAPSHOT</version>
+        </dependency>
+
+        <!-- used for the TemperatureSensor interface -->
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-device</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
 
